--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <!-- bootstrap file -->
     <link rel="stylesheet" href="/dist/bootstrap.min.css">
       <!-- css file -->
-    <link rel="stylesheet" href="/dist/css/main.css">
-    <link rel="stylesheet" href="/dist/css/main.css.map">
+      <link rel="stylesheet" href="/css/main.css">
+
+    <!-- <link rel="stylesheet" href="/dist/css/main.css"> -->
+
 
 
 
