add bootstrap file in css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   
     <!-- bootstrap file -->
     <link rel="stylesheet" href="/dist/bootstrap.min.css">
+
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
       <!-- css file -->
       <link rel="stylesheet" href="/css/main.css">
 
