--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   
     <!-- bootstrap file -->
-    <link rel="stylesheet" href="/dist/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="/dist/bootstrap.min.css"> -->
 
     <link rel="stylesheet" href="/css/bootstrap.min.css">
       <!-- css file -->
