add file with dot

--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
 
   
     <!-- bootstrap file -->
-    <!-- <link rel="stylesheet" href="/dist/bootstrap.min.css"> -->
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./dist/bootstrap.min.css">
       <!-- css file -->
-      <link rel="stylesheet" href="/css/main.css">
 
-    <!-- <link rel="stylesheet" href="/dist/css/main.css"> -->
+    <link rel="stylesheet" href="./dist/css/main.css">
 
 
 
