--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interloper</title>
     
-    <link rel="icon" href="/img/favicon.png" type="image/png" >
+    <link rel="icon" href="./img/favicon.png" type="image/png" >
 
     <!-- Font Awesome file -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
@@ -39,7 +39,7 @@
 
 <!-- Logo -->
 <div class="col-3 logo_int  ">
-      <img src="/img/interloper-logo.png" alt="interloper">
+      <img src="./img/interloper-logo.png" alt="interloper">
 </div>
 
 <!-- Banner -->
@@ -60,7 +60,7 @@
           </div>
 
         </div>
-                <img src="/img/small-pc-for-top-banner.png" alt="" class="computer">
+                <img src="./img/small-pc-for-top-banner.png" alt="" class="computer">
       </div>
 <!-- Banner end-->
 </div>
@@ -191,7 +191,7 @@
         </div>
         </div>
         <div class="col-md-4">        
-          <img src="/img/top-3phones.png" alt="" class="phones">
+          <img src="./img/top-3phones.png" alt="" class="phones">
 
         </div>
         </div> 
@@ -261,7 +261,7 @@
         <div class="row">
 
           <div class="col-md-6 pc_img">
-            <img src="/img/banner-pc-1.png" alt="">
+            <img src="./img/banner-pc-1.png" alt="">
           </div>
 
           <div class="col-md-6 ">
@@ -288,7 +288,7 @@
         <div class="row">
 
           <div class="col-md-6 pc_img">
-            <img src="/img/banner-pc-2.png" alt="">
+            <img src="./img/banner-pc-2.png" alt="">
           </div>
 
           <div class="col-md-6 ">
@@ -346,7 +346,7 @@
 						 		<div class="col-sm-12 col-lg-3">
                    <div class="" style="width: 12rem;">
                     <div class="circle_inback">
-                     <img src="/img/pink-slider-img-back-prod.png" class="lptp_img text-center">
+                     <img src="./img/pink-slider-img-back-prod.png" class="lptp_img text-center">
                      </div>
 						 				<div class="content text-center">
                        <h6 class="title">Why you should use skin masks ?</h6>
@@ -360,7 +360,7 @@
 						 		<div class="col-sm-12 col-lg-3">
                    <div class="" style="width: 12rem;">
                     <div class="circle_inback">
-                     <img src="/img/skyblue-slider-img-back-pro.png" class="lptp_img text-center">
+                     <img src="./img/skyblue-slider-img-back-pro.png" class="lptp_img text-center">
                      </div>
 						 				<div class="content text-center">
                        <h6 class="title">Why you should use skin masks ?</h6>
@@ -374,7 +374,7 @@
 						 		<div class="col-sm-12 col-lg-3">
                    <div class="" style="width: 12rem;">
                     <div class="circle_inback">
-                     <img src="/img/pink-slider-img-back-pro.png" class="lptp_img text-center">
+                     <img src="./img/pink-slider-img-back-pro.png" class="lptp_img text-center">
                      </div>
 						 				<div class="content text-center">
                        <h6 class="title">Why you should use skin masks ?</h6>
@@ -388,7 +388,7 @@
 						 		<div class="col-sm-12 col-lg-3">
                    <div class="" style="width: 12rem;">
                     <div class="circle_inback">
-                     <img src="/img/cblue-slider-img-back-prod.png" class="lptp_img text-center">
+                     <img src="./img/cblue-slider-img-back-prod.png" class="lptp_img text-center">
                      </div>
 						 				<div class="content text-center">
                        <h6 class="title">Why you should use skin masks ?</h6>
@@ -443,7 +443,7 @@
 						 		<div class="col-sm-12 col-lg-3">
                    <div class="" style="width: 12rem;">
                     <div class="circle_inback">
-                     <img src="/img/pink-slider-img-back-prod.png" class="lptp_img text-center">
+                     <img src="./img/pink-slider-img-back-prod.png" class="lptp_img text-center">
                      </div>
 						 				<div class="content text-center">
                        <h6 class="title">Why you should use skin masks ?</h6>
@@ -457,7 +457,7 @@
 						 		<div class="col-sm-12 col-lg-3">
                    <div class="" style="width: 12rem;">
                     <div class="circle_inback">
-                     <img src="/img/skyblue-slider-img-back-pro.png" class="lptp_img text-center">
+                     <img src="./img/skyblue-slider-img-back-pro.png" class="lptp_img text-center">
                      </div>
 						 				<div class="content text-center">
                        <h6 class="title">Why you should use skin masks ?</h6>
@@ -471,7 +471,7 @@
 						 		<div class="col-sm-12 col-lg-3">
                    <div class="" style="width: 12rem;">
                     <div class="circle_inback">
-                     <img src="/img/pink-slider-img-back-pro.png" class="lptp_img text-center">
+                     <img src="./img/pink-slider-img-back-pro.png" class="lptp_img text-center">
                      </div>
 						 				<div class="content text-center">
                        <h6 class="title">Why you should use skin masks ?</h6>
@@ -485,7 +485,7 @@
 						 		<div class="col-sm-12 col-lg-3">
                    <div class="" style="width: 12rem;">
                     <div class="circle_inback">
-                     <img src="/img/cblue-slider-img-back-prod.png" class="lptp_img text-center">
+                     <img src="./img/cblue-slider-img-back-prod.png" class="lptp_img text-center">
                      </div>
 						 				<div class="content text-center">
                        <h6 class="title">Why you should use skin masks ?</h6>
@@ -556,7 +556,7 @@
 						 		<div class="col-sm-12 col-lg-3">
                    <div class="" style="width: 12rem;">
                     <div class="circle_inback">
-                     <img src="/img/laptop-with-back.png" class="lptp_img text-center">
+                     <img src="./img/laptop-with-back.png" class="lptp_img text-center">
                      </div>
 						 				<div class="content text-center">
                        <h6 class="title">Why you should use skin masks ?</h6>
@@ -570,7 +570,7 @@
 						 		<div class="col-sm-12 col-lg-3">
                    <div class="" style="width: 12rem;">
                     <div class="circle_inback">
-                     <img src="/img/belt-slider-img-back-prod.png" class="lptp_img text-center">
+                     <img src="./img/belt-slider-img-back-prod.png" class="lptp_img text-center">
                      </div>
 						 				<div class="content text-center">
                        <h6 class="title">Why you should use skin masks ?</h6>
@@ -584,7 +584,7 @@
 						 		<div class="col-sm-12 col-lg-3">
                    <div class="" style="width: 12rem;">
                     <div class="circle_inback">
-                     <img src="/img/shoes-slider-img-back-prod.png" class="lptp_img text-center">
+                     <img src="./img/shoes-slider-img-back-prod.png" class="lptp_img text-center">
                      </div>
 						 				<div class="content text-center">
                        <h6 class="title">Why you should use skin masks ?</h6>
@@ -598,7 +598,7 @@
 						 		<div class="col-sm-12 col-lg-3">
                    <div class="" style="width: 12rem;">
                     <div class="circle_inback">
-                     <img src="/img/mobile-slider-img-back-prod.png" class="lptp_img text-center">
+                     <img src="./img/mobile-slider-img-back-prod.png" class="lptp_img text-center">
                      </div>
 						 				<div class="content text-center">
                        <h6 class="title">Why you should use skin masks ?</h6>
@@ -642,7 +642,7 @@
  
               <div class="col-md-3">
               <div class="card" style="width: 16rem;">
-                <img class="card-img-top" src="/img/card-botm.png" alt="Card image cap">
+                <img class="card-img-top" src="./img/card-botm.png" alt="Card image cap">
                 <div class="card-body">
                   <h6>Lorem ipsum dolor </h6>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -653,7 +653,7 @@
  
               <div class="col-md-3">
               <div class="card" style="width: 16rem;">
-                <img class="card-img-top" src="/img/card-botm.png" alt="Card image cap">
+                <img class="card-img-top" src="./img/card-botm.png" alt="Card image cap">
                 <div class="card-body">
                   <h6>Lorem ipsum dolor </h6>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -664,7 +664,7 @@
  
               <div class="col-md-3">
               <div class="card" style="width: 16rem;">
-                <img class="card-img-top" src="/img/card-botm.png" alt="Card image cap">
+                <img class="card-img-top" src="./img/card-botm.png" alt="Card image cap">
                 <div class="card-body">
                   <h6>Lorem ipsum dolor </h6>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -675,7 +675,7 @@
  
               <div class="col-md-3">
               <div class="card" style="width: 16rem;">
-                <img class="card-img-top" src="/img/card-botm.png" alt="Card image cap">
+                <img class="card-img-top" src="./img/card-botm.png" alt="Card image cap">
                 <div class="card-body">
                   <h6>Lorem ipsum dolor </h6>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -706,7 +706,7 @@
         <div class="line mb-3 mx-auto"></div>
         <div class="d-md-flex px-5 justify-content-around bd-highlight col-md-12 pt-5 pb-5 mb-3">
             <div class="p-2 flex-fill bd-highlight mb-5 mb-md-0">
-                <img src="/img/interloper-logo.png" alt="">
+                <img src="./img/interloper-logo.png" alt="">
             </div>
 
             <div class="p-2 flex-fill bd-highlight mb-3 mb-md-0" >
